@@ -31,17 +31,18 @@ import java.util.concurrent.TimeUnit;
 
 import org.apache.flume.Channel;
 import org.apache.flume.Context;
-import org.apache.flume.CounterGroup;
 import org.apache.flume.Event;
 import org.apache.flume.EventDrivenSource;
 import org.apache.flume.Source;
 import org.apache.flume.channel.ChannelProcessor;
 import org.apache.flume.conf.Configurable;
 import org.apache.flume.event.EventBuilder;
+import org.apache.flume.instrumentation.SourceCounter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.base.Preconditions;
+import java.nio.charset.Charset;
 
 /**
  * <p>
@@ -139,9 +140,9 @@ Configurable {
   private static final Logger logger = LoggerFactory
       .getLogger(ExecSource.class);
 
-
+  private String shell;
   private String command;
-  private CounterGroup counterGroup;
+  private SourceCounter sourceCounter;
   private ExecutorService executor;
   private Future<?> runnerFuture;
   private long restartThrottle;
@@ -149,16 +150,16 @@ Configurable {
   private boolean logStderr;
   private Integer bufferCount;
   private ExecRunnable runner;
+  private Charset charset;
 
   @Override
   public void start() {
     logger.info("Exec source starting with command:{}", command);
 
     executor = Executors.newSingleThreadExecutor();
-    counterGroup = new CounterGroup();
 
-    runner = new ExecRunnable(command, getChannelProcessor(), counterGroup,
-        restart, restartThrottle, logStderr, bufferCount);
+    runner = new ExecRunnable(shell, command, getChannelProcessor(), sourceCounter,
+        restart, restartThrottle, logStderr, bufferCount, charset);
 
     // FIXME: Use a callback-like executor / future to signal us upon failure.
     runnerFuture = executor.submit(runner);
@@ -168,6 +169,7 @@ Configurable {
      * it sets our state to running. We want to make sure the executor is alive
      * and well first.
      */
+    sourceCounter.start();
     super.start();
 
     logger.debug("Exec source started");
@@ -200,10 +202,11 @@ Configurable {
       }
     }
 
+    sourceCounter.stop();
     super.stop();
 
     logger.debug("Exec source with command:{} stopped. Metrics:{}", command,
-        counterGroup);
+        sourceCounter);
   }
 
   @Override
@@ -224,29 +227,42 @@ Configurable {
 
     bufferCount = context.getInteger(ExecSourceConfigurationConstants.CONFIG_BATCH_SIZE,
         ExecSourceConfigurationConstants.DEFAULT_BATCH_SIZE);
+
+    charset = Charset.forName(context.getString(ExecSourceConfigurationConstants.CHARSET,
+        ExecSourceConfigurationConstants.DEFAULT_CHARSET));
+
+    shell = context.getString(ExecSourceConfigurationConstants.CONFIG_SHELL, null);
+
+    if (sourceCounter == null) {
+      sourceCounter = new SourceCounter(getName());
+    }
   }
 
   private static class ExecRunnable implements Runnable {
 
-    public ExecRunnable(String command, ChannelProcessor channelProcessor,
-        CounterGroup counterGroup, boolean restart, long restartThrottle,
-        boolean logStderr, int bufferCount) {
+    public ExecRunnable(String shell, String command, ChannelProcessor channelProcessor,
+        SourceCounter sourceCounter, boolean restart, long restartThrottle,
+        boolean logStderr, int bufferCount, Charset charset) {
       this.command = command;
       this.channelProcessor = channelProcessor;
-      this.counterGroup = counterGroup;
+      this.sourceCounter = sourceCounter;
       this.restartThrottle = restartThrottle;
       this.bufferCount = bufferCount;
       this.restart = restart;
       this.logStderr = logStderr;
+      this.charset = charset;
+      this.shell = shell;
     }
 
-    private String command;
-    private ChannelProcessor channelProcessor;
-    private CounterGroup counterGroup;
+    private final String shell;
+    private final String command;
+    private final ChannelProcessor channelProcessor;
+    private final SourceCounter sourceCounter;
     private volatile boolean restart;
-    private long restartThrottle;
-    private int bufferCount;
-    private boolean logStderr;
+    private final long restartThrottle;
+    private final int bufferCount;
+    private final boolean logStderr;
+    private final Charset charset;
     private Process process = null;
 
     @Override
@@ -255,14 +271,19 @@ Configurable {
         String exitCode = "unknown";
         BufferedReader reader = null;
         try {
-          String[] commandArgs = command.split("\\s+");
-          process = new ProcessBuilder(commandArgs).start();
+          if(shell != null) {
+            String[] commandArgs = formulateShellCommand(shell, command);
+            process = Runtime.getRuntime().exec(commandArgs);
+          }  else {
+            String[] commandArgs = command.split("\\s+");
+            process = new ProcessBuilder(commandArgs).start();
+          }
           reader = new BufferedReader(
-              new InputStreamReader(process.getInputStream()));
+              new InputStreamReader(process.getInputStream(), charset));
 
           // StderrLogger dies as soon as the input stream is invalid
           StderrReader stderrReader = new StderrReader(new BufferedReader(
-              new InputStreamReader(process.getErrorStream())), logStderr);
+              new InputStreamReader(process.getErrorStream(), charset)), logStderr);
           stderrReader.setName("StderrReader-[" + command + "]");
           stderrReader.setDaemon(true);
           stderrReader.start();
@@ -270,15 +291,17 @@ Configurable {
           String line = null;
           List<Event> eventList = new ArrayList<Event>();
           while ((line = reader.readLine()) != null) {
-            counterGroup.incrementAndGet("exec.lines.read");
-            eventList.add(EventBuilder.withBody(line.getBytes()));
+            sourceCounter.incrementEventReceivedCount();
+            eventList.add(EventBuilder.withBody(line.getBytes(charset)));
             if(eventList.size() >= bufferCount) {
               channelProcessor.processEventBatch(eventList);
+              sourceCounter.addToEventAcceptedCount(eventList.size());
               eventList.clear();
             }
           }
           if(!eventList.isEmpty()) {
             channelProcessor.processEventBatch(eventList);
+            sourceCounter.addToEventAcceptedCount(eventList.size());
           }
         } catch (Exception e) {
           logger.error("Failed while running command: " + command, e);
@@ -308,6 +331,15 @@ Configurable {
         }
       } while(restart);
     }
+
+    private static String[] formulateShellCommand(String shell, String command) {
+      String[] shellArgs = shell.split("\\s+");
+      String[] result = new String[shellArgs.length + 1];
+      System.arraycopy(shellArgs, 0, result, 0, shellArgs.length);
+      result[shellArgs.length] = command;
+      return result;
+    }
+
     public int kill() {
       if(process != null) {
         synchronized (process) {
@@ -329,10 +361,12 @@ Configurable {
   private static class StderrReader extends Thread {
     private BufferedReader input;
     private boolean logStderr;
+
     protected StderrReader(BufferedReader input, boolean logStderr) {
       this.input = input;
       this.logStderr = logStderr;
     }
+
     @Override
     public void run() {
       try {
@@ -340,6 +374,9 @@ Configurable {
         String line = null;
         while((line = input.readLine()) != null) {
           if(logStderr) {
+            // There is no need to read 'line' with a charset
+            // as we do not to propagate it.
+            // It is in UTF-16 and would be printed in UTF-8 format.
             logger.info("StderrLogger[{}] = '{}'", ++i, line);
           }
         }
